<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">batterybenchmark</string>
    <string name="action_settings">Settings</string>
    <string name="test_mode">Test mode: </string>
    <string name="test_duration">Test duration: </string>
    <string name="test_app">Test App: </string>
    <string name="test_interval">Test interval: </string>
    <string name="main_endTest_title">Test ends by:</string>
    <string name="main_default_display">Default</string>
    <string name="button_startTest">Start Test</string>
    <string name="main_tips">You can use Settings menu in the action bar to set the test mode, duration, and so on.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="button_settings">Settings</string>
    <string name="button_viewResult">View Result</string>
    <string name="pref_testMode">Select Test Mode</string>
    <string name="pref_testMode_summary">You can choose auto test or manual test.</string>
    <string name="pref_testMode_default">auto</string>
    <string name="pref_autoTestSelection">Select auto test option</string>
    <string name="pref_autoTestSelection_summary">You can select Chrome or Google Map.</string>
    <string name="pref_autoTestSelection_default">chrome</string>
    <string name="pref_websiteSetting">Website setting</string>
    <string name="pref_websiteSetting_summary">You can set the websites you want to visit here.</string>
    <string name="pref_websiteSetting_default">http://www.cnn.com\nhttp://www.lifeincode.net\nhttp://www.cs.columbia.edu</string>
    <string name="pref_addressSetting">Address setting</string>
    <string name="pref_addressSetting_summary">You can set the addresses you want to search here.</string>
    <string name="pref_addressSetting_default">Ramon Aponte Playground, West 47th Street, New York\nThe Lucerne Hotel, 201 W 79th St, New York\nColumbia University 116th Street and Broadway New York</string>
    <string name="pref_manual_app">Choose App</string>
    <string name="pref_manual_app_summary">Click here to choose an App</string>
    <string name="title_activity_app_show">Select App</string>
    <string name="pref_manual_app_display_name">App name</string>
    <string name="pref_manual_app_display_package">App package</string>
    <string name="pref_manual_app_display_class">App class</string>
    <string name="pref_testFinishMode">Select test finish condition</string>
    <string name="pref_testFinishMode_summary">You can choose two different conditions.</string>
    <string name="pref_testFinishMode_default">time</string>
    <string name="pref_testTime">Set the test time</string>
    <string name="pref_testTime_summary">Click here to set the time(in minutes).</string>
    <string name="pref_testTime_default">120</string>
    <string name="pref_testPercent">Set the battery finish percentage</string>
    <string name="pref_testPercent_summary">Click here to set the finish percentage(in percent).</string>
    <string name="pref_testPercent_default">10</string>
    <string name="pref_testInterval">Test interval</string>
    <string name="pref_testInterval_summary">Click here to set the test interval(in second).</string>
    <string name="pref_testInterval_default">5</string>
    <string name="title_activity_periodical_task">PeriodicalTask</string>
    <string name="pref_manual_screenSwitch">Keep screen on</string>
    <string name="pref_manual_screenSwitch_summary"></string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_view_curve">ViewCurve</string>
    <string name="title_activity_upload_test_data">UploadTestData</string>
    <string name="periodicalTask_paused">The task is paused. You can continue it or stop it now.</string>
    <string name="periodicalTask_continue">Continue</string>
    <string name="periodicalTask_stop">Stop</string>

</resources>
