<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PeriodicalTask" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/periodicalTask_paused" />

    <Button
        android:id="@+id/periodicalTask_button_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:onClick="continueTask"
        android:text="@string/periodicalTask_continue" />

    <Button
        android:id="@+id/periodicalTask_button_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/periodicalTask_button_continue"
        android:layout_below="@+id/periodicalTask_button_continue"
        android:onClick="stopTask"
        android:text="@string/periodicalTask_stop" />

</RelativeLayout>
